# automata

./: ChangeLog.md  README.md  automata.cabal  automaton.cabal  cabal.project
bench/: Main.hs
common/: Alphabet.hs  Sentence.hs
src/Automata/: Dfa.hs  Dfsa.hs  Dfst.hs  Internal.hs  Nfa.hs  Nfsa.hs  Nfst.hs  Regex.hs
src/Automata/Dfa/: Builder.hs
src/Automata/Dfsa/: Builder.hs  Unboxed.hs
src/Automata/Dfst/: Compact.hs
src/Automata/Dfst/Compact/: Unboxed.hs
src/Automata/Internal/: Partition.hs  Transducer.hs
src/Automata/Nfa/: Builder.hs
src/Automata/Nfsa/: Builder.hs
src/Automaton/: Dfa.hs  Internal.hs  Nfa.hs
src/Data/: Bytes.hs
test/: Main.hs
