cabal-version: 2.2
name: automata
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/automata#readme>
homepage: https://github.com/andrewthad/automata
bug-reports: https://github.com/andrewthad/automata/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/automaton

library
  hs-source-dirs: src
  exposed-modules:
    Automata.Dfa
    Automata.Nfa
    Automata.Dfa.Builder
    Automata.Nfa.Builder
  other-modules:
    Automata.Internal
  build-depends:
    , base >=4.11.1 && <5
    , primitive-checked >= 0.6.4
    , primitive-containers >= 0.3
    , containers
    , contiguous-checked
    , semirings >= 0.2.1.1
    , transformers
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      automata
    , base >=4.7 && <5
    , tasty
    , tasty-hunit
    , tasty-leancheck
    , leancheck
    , quickcheck-classes
    , QuickCheck
    , tasty-quickcheck
    , HUnit
  default-language: Haskell2010
