cabal-version: 2.2
name: automata
version: 0.1.0.0
synopsis: automata
description:
  This package implements the following:
  .
  Deterministic Finite State Automata (DFSA)
  .
  Non-Deterministic Finite State Automata (NFSA)
  .
  Deterministic Finite State Transducers (DFST)
  .
  Non-Deterministic Finite State Transducers (NFST)
category: Data, Math
homepage: https://github.com/andrewthad/automata
bug-reports: https://github.com/andrewthad/automata/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/automata

library
  hs-source-dirs: src
  exposed-modules:
    Automata.Dfsa
    Automata.Dfsa.Unboxed
    Automata.Nfsa
    Automata.Nfsa.Builder
    Automata.Internal
    Automata.Internal.Transducer
    Automata.Nfst
    Automata.Dfst
    Automata.Dfst.Compact
    Data.Bytes
  build-depends:
    , base >=4.10.1.0 && <5
    , bytestring >= 0.10.8
    , primitive >= 0.6.4
    , primitive-containers >= 0.3.3 && < 0.4
    , containers >= 0.5.9
    , contiguous >= 0.3.2 && < 0.4
    , semirings >= 0.3.1.1
    , transformers >= 0.5.5 && < 0.6
    , disjoint-containers >= 0.2.4 && < 0.3
  ghc-options: -Wall -O2
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , automata
    , gauge >= 0.2.4
    , enum-types >= 0.1.1
    , primitive >= 0.6.4
  other-modules: Alphabet
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench, common
  main-is: Main.hs

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test, common
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  other-modules: Alphabet
  build-depends:
    , HUnit
    , QuickCheck
    , automata
    , base >=4.7 && <5
    , containers
    , enum-types >= 0.1.1
    , leancheck
    , leancheck-enum-instances >= 0.1
    , primitive
    , quickcheck-classes
    , quickcheck-enum-instances >= 0.1
    , tasty
    , tasty-hunit
    , tasty-leancheck
    , tasty-quickcheck
  default-language: Haskell2010
