cabal-version: 2.2
name: automaton
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/automaton#readme>
homepage: https://github.com/andrewthad/automaton#readme
bug-reports: https://github.com/andrewthad/automaton/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/automaton

library
  hs-source-dirs: src
  exposed-modules:
    Automaton.Dfa
    Automaton.Nfa
  build-depends:
    , base >=4.11.1 && <5
    , primitive-containers >= 0.3
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_automaton
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      automaton
    , base >=4.7 && <5
  default-language: Haskell2010
